--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@elysiajs/cors": "^1.4.1",
+    "@elysiajs/openapi": "^1.4.14",
     "drizzle-orm": "^0.45.1",
     "elysia": "^1.4.22",
     "postgres": "^3.4.8"
