--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@elysiajs/eden": "^1.4.6",
+    "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.20",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
